2010-06-08  Onkar Shinde  <onkarshinde@gmail.com>

	* src/file-op.c, src/file-op-gio.c: Add files opened/saved to recently
	used file list. This way they show up in 'Recently Used' section of
	file chooser dialog.

2010-06-04  Onkar Shinde  <onkarshinde@gmail.com>

	* src/interface.c: Fix icon loading on Windows by using fallback icon.
	* tools/: Remove files from initial stages of development. Not needed
	anymore.
	* GNUSim8085.prj: Remove because none of the maintainers use Anjuta.
	* GNUSim8085.glade: Remove as discussed on mailing list.

2010-06-03  Onkar Shinde  <onkarshinde@gmail.com>

	* src/Makefile.am: Unbreak linux build. Stupid mistake about CFLAGS.
	* src/main.c: Fix crash on linux.
	* installer.nsi.in: Add more languages to installer.
	* po/de.po, AUTHORS: Updated German translation from launchpad.
	* src/src/gui-list-data.c, src/gui-list-stack.c: Split translatable
	string into two. Makes reuse of translations.

2010-06-01  Onkar Shinde  <onkarshinde@gmail.com>

	* po/*.po, AUTHORS: Updated translations from Launchpad.
	* src/main.c, src/Makefile.am, installer.nsi.in, WINDOWS-PORT.txt: Some
	modifications to make i18n support work on Windows.

2010-05-31  Onkar Shinde  <onkarshinde@gmail.com>

	* src/*.c, src/*.h, src/Makefile.am, AUTHORS: Add editable memory
	listing as a tab, thanks to Debajit for the huge patch. :-)
	Fixes: LP: #579341.

2010-05-26  Onkar Shinde  <onkarshinde@gmail.com>

	* src/interface.c: Change startup dialog from GtkWindow to GtkDialog.
	The 'modal' behaviour works as expected. Fixes LP: #519828.
	* po/de.po, AUTHORS: Updated German translation from launchpad.
	* src/interface.c, po/gnusim8085.pot: Move format tags outside
	translatable strings. Update pot file accordingly.
	* po/*.po: Semi-auto update of translations as per latest pot file.

2010-05-25  Onkar Shinde  <onkarshinde@gmail.com>

	* src/support.c: Fix stupid mistake - trying to access message from
	null error object. Remove the corresponding variable as it is never